--- a/src/main/resources/config/Config.properties
+++ b/src/main/resources/config/Config.properties
@@ -2,9 +2,9 @@
 TestDataPath=./testData/
 Application
 ------------
-URL=https://adminportal-qa.betatestingapp2019.com/
-username=ezzy123@email.com
-password=ezzy@123
+URL=https://adminportal-uat.betatestingapp2019.com/
+username=blomaappdev@gmail.com
+password=bloma@123
 
 Browsers
 -------------
