Converted to Qa Environment from UAT, Also Added Illustration Listing.

--- a/src/main/resources/config/Config.properties
+++ b/src/main/resources/config/Config.properties
@@ -2,7 +2,7 @@
 TestDataPath=./testData/
 Application
 ------------
-URL=https://adminportal-uat.betatestingapp2019.com/
+URL=https://adminportal-qa.betatestingapp2019.com/
 username=blomaappdev@gmail.com
 password=bloma@123
 
