--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,14 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>${commons-lang3-version}</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+     <dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>4.1.1</version>
+   </dependency>
+		
 
 
 	</dependencies>
